--- a/package.json
+++ b/package.json
@@ -4,13 +4,23 @@
   "private": true,
   "homepage": "https://goitacademy.github.io/react-homework-template/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
+    "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "formik": "^2.4.5",
+    "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
+    "react-number-format": "^5.3.1",
+    "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "styled-components": "^6.0.8",
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
