--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://illia12august.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^12.1.4",
@@ -17,7 +18,9 @@
     "react-icons": "^4.11.0",
     "react-number-format": "^5.3.1",
     "react-redux": "^8.1.3",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3",
     "yup": "^1.3.2"
